--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/assignment1.css">
 </head>
 <body>
-    <header>
-
-    </header>
+    <header class="header">
+        <div class="banner" >
+            <div>
+            <h3 class="banner-greeting">Happy New Year</h3>
+            <h1 class="banner-title">New Year Party <br> Celebration</h1>
+             </div>
+           </div>
+        </header>
+        
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
