--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </header>
         
     <main>
+        <div class="offer">
+            <h1 class="offer-red">65% OFF</h1>
+            <h3 class="offer-red2">OUR HOLIDAY DEALS ARE BETTER </h3>
+            <h2><b>ALL CATEGORIES</b> </h2>
+            <img class="offer-image" src="resources/New Year Photo.png">
+        </div>
 
     </main>
     <footer>
