--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/assignment1.css">
 </head>
 <body>
-    <header class="header">
+  <header class="header">
         <div class="banner" >
             <div>
             <h3 class="banner-greeting">Happy New Year</h3>
@@ -133,8 +133,6 @@
     
 
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>  
 </body>
 </html>
